@@ -17,7 +17,7 @@ Improvements:
       quantiles of null patch size distributions. 
   
   * The package gains a generic function `display_matrix`, to quickly display 
-      the matrices being used using ggplot2
+      the matrices being used in `spatialwarnings` objects using ggplot2
   
   * Improved the fitting of distributions, which should be more robust now. 
   
@@ -25,6 +25,8 @@ Improvements:
   
   * Added a `display_matrix()` function that can be used to display the matrices
       used to compute indicators.
+  
+  * Speed improvements in label()
   
 Bug fixes: 
   
